<resources>
    <string name="app_name">Test</string>


    <string name="password">Password</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="welcome_back_ready_to_hit_the_road">Welcome Back \nReady to hit the road</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_the_email_address_associated_with_your_account_and_nwe_ll_send_you_a_link_to_reset_your_password">Enter the email address associated with your account and\nwe\'ll send you a link to reset your password.</string>
    <string name="email">Email</string>
    <string name="continue_1">Continue</string>
    <string name="return_to_sing_in">Return to sing in</string>
    <string name="create_a_new_account">Create a New account</string>
    <string name="the_account_and_password_fields_must_not_be_left_blank">The account and password fields must not be left blank.</string>
    <string name="error">Error</string>
    <string name="search_your_dream_car">Search your dream car.....</string>
    <string name="car_details">Car Details</string>
    <string name="car_features">Car features</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking_details">Booking Details</string>
    <string name="contact">Contact*</string>
    <string name="payment_methods">Payment methods</string>
    <string name="up_photo">Up Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <!-- UpLoadFileActivity -->
    <string name="driver_documents">Driver Documents</string>
    <string name="cccd">Identity Card</string>
    <string name="cccd_no">Card No.</string>
    <string name="cccd_no_hint">12 digits</string>
    <string name="cccd_front">Front side</string>
    <string name="cccd_back">Back side</string>
    <string name="gplx">Driving License</string>
    <string name="gplx_no">License No.</string>
    <string name="gplx_no_hint">12 digits</string>
    <string name="gplx_class">Class</string>
    <string name="gplx_expiry">Expiry Date</string>
    <string name="gplx_expiry_hint">DD/MM/YYYY</string>
    <string name="selfie_photo">Selfie Photo</string>
    <string name="selfie_photo_optional">Selfie Photo (optional)</string>
    <string name="remove">Remove</string>
    <string name="submit">Submit</string>
    <string name="select_date">Select date</string>
    <string name="pick_photo_source">Select photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="err_cccd_no">Card No. must be 12 digits</string>
    <string name="err_cccd_front">Please add the front side of the card</string>
    <string name="err_cccd_back">Please add the back side of the card</string>
    <string name="err_gplx_no">License No. must be 12 digits</string>
    <string name="err_gplx_class">Please select a class</string>
    <string name="err_gplx_expiry">Please select the expiry date</string>
    <string name="err_gplx_expiry_past">The expiry date must be in the future</string>
    <string name="err_camera_permission">Camera permission is required</string>
    <string name="err_photo_failed">Could not read the selected photo</string>
    <string name="success_submit">Submitted successfully</string>
</resources>