<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_primary"
    tools:context=".ui.activity.SingUpActivity">

    <com.example.test.ui.csview.StatusBarView
        android:id="@+id/v_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_car"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_status" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:fontFamily="@font/roboto_bold"
        android:includeFontPadding="false"
        android:text="Quent"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/ic_car"
        app:layout_constraintLeft_toRightOf="@id/ic_car"
        app:layout_constraintTop_toTopOf="@id/ic_car" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/roboto_semibold"
        android:includeFontPadding="false"
        android:text="@string/sing_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_car" />

    <com.example.test.ui.csview.CsEditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:hint="@string/full_name"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.example.test.ui.csview.CsEditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:hint="@string/email_address"
        app:layout_constraintTop_toBottomOf="@id/edt_full_name" />

    <com.example.test.ui.csview.CsEditText
        android:id="@+id/edt_pass_word"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:hint="@string/password"
        android:drawableRight="@drawable/ic_hide_txt"
        app:layout_constraintTop_toBottomOf="@id/edt_address" />


    <com.example.test.ui.csview.CsButton
        android:id="@+id/btn_sing_up"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/edt_pass_word"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/sing_up"
        app:typeColor="black"/>

    <com.example.test.ui.csview.CsButton
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_sing_up"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/login"
        app:typeColor="gray"/>


    <TextView
        android:id="@+id/tv_login"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textSize="@dimen/_11sdp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="#7F7F7F"/>

</androidx.constraintlayout.widget.ConstraintLayout>