<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BookingDetailsActivity">

    <com.example.test.ui.csview.StatusBarView
        android:id="@+id/v_status"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ic_back"
        app:layout_constraintTop_toBottomOf="@id/v_status"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"/>

    <com.example.test.ui.csview.CsTextTitle
        app:layout_constraintTop_toTopOf="@id/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_details"/>
    
    <com.example.test.ui.csview.CsEditText
        android:id="@+id/edt_name"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/full_name"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ic_back"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:drawableLeft="@drawable/ic_uer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"/>

    <com.example.test.ui.csview.CsEditText
        android:id="@+id/edt_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/email_address"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:drawableLeft="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"/>

    <com.example.test.ui.csview.CsEditText
        android:id="@+id/edt_contact"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/contact"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:drawableLeft="@drawable/ic_contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"/>

    
    <com.example.test.ui.csview.CsButton
        android:id="@+id/btn_play"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="$1400 Pay Now"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"/>



</androidx.constraintlayout.widget.ConstraintLayout>